Produce jre like image using jlink